# orca_mcp

./: .gitignore  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  COUNTRY_ELIGIBILITY_COMPLETE.md  COUNTRY_ELIGIBILITY_SYSTEM.md  COUNTRY_MAPPING_INTEGRATION.md  DISPLAY_READY_ENDPOINTS.md  IMF_GATEWAY_REDESIGN.md  IMF_INTEGRATION.md  MCP_CLIENT_EXAMPLES.md  Procfile  ROUTER_MIGRATION_PLAN.md  RVM_WITH_ELIGIBILITY.md  STAGING_TOOLS_COMPLETE.md  TEST_IN_CLAUDE_DESKTOP.md  TOOL_ACCESS_PLAN.md  TRANSACTION_API_GUIDE.md  TRANSACTION_MCP_SUMMARY.md  UNIFIED_STAGING_MODEL.md  __init__.py  api.py  check_columns.py  check_mexico_ytw.py  check_pemex_rating.py  check_return_ytw.py  client.py  client_config.py  create_portfolio_summary.py  delete_wrong_txn.py  etf_viewer.py  fix_mexico_sell.py  mcp_sse_server.py  migrate_to_unified_staging.py  pyproject.toml  railway.json  requirements.txt  server.py  service_registry.json  set_romania_ineligible.py  show_all_holdings.py  (+8 more)
data/: build_country_eligibility.py  etf_bonds.db
docs/: ETF_REFERENCE_DATA.md  VIDEO_API_ARCHITECTURE.md
tools/: __init__.py  backfill.py  bond_matcher.py  cache_manager.py  cloudflare_d1.py  compliance.py  data_access.py  data_router.py  data_upload.py  display_endpoints.py  edgar_gateway.py  etf_bond_scraper.py  etf_reference.py  external_mcps.py  fallback_client.py  imf_gateway.py  performance.py  query_router.py  sovereign_reports.py  supabase_client.py  test_router.py  transactions.py  video_gateway.py
